deploy/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-binance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-binance
  template:
    metadata:
      labels:
        app: api-binance
    spec:
      containers:
      - name: api-binance
        image: gcr.io/tss-1s2024/backend-api:latest
        ports:
        - containerPort: 8989
        resources:
          # You must specify requests for CPU to autoscale
          # based on CPU utilization
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
