deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-binance
spec:
  selector:
    app: api-binance
  ports:
    - protocol: TCP
      port: 90
      targetPort: 8989
  type: ClusterIP
