deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-binance-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec: 
  rules:
  - host: api.tss2024.com
    http:
      paths:
      - backend:
          service:
            name: api-binance-ingress
            port:
              number: 80
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - api.tss2024.com
    secretName: api-binance-ingress-secret
